# rules-ruby-demo

./: BUILD.bazel  Gemfile  MODULE.bazel  app.rb  bar.rb
foo/: bar.rb
